--- a/index.Rmd
+++ b/index.Rmd
@@ -15,7 +15,7 @@ description: "SciencesPo UG Econometrics online textbook. Almost no Maths."
 ---
 
 ```{r, setup, include=FALSE}
-knitr::opts_chunk$set(comment=ScPoEconometrics:::getprompt())
+knitr::opts_chunk$set(comment=ScPoEconometrics:::getprompt(),fig.align = 'center')
 ```
 
 
